k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-v2
  labels:
    app: blog-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-v2
  template:
    metadata:
      labels:
        app: blog-v2
    spec:
      containers:
        - name: blog-v2
          image: ghcr.io/skill-wanderer/blog-v2:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          imagePullPolicy: Always
