k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog-v2-service
  labels:
    app: blog-v2
spec:
  selector:
    app: blog-v2
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
